# file-explorer-tauri

./: .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  README.md  changelog.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
data/: fileTypes.jsonc
devInfo/: dataAttributesInfo.md
src/: App.module.scss  App.tsx  appConfig.ts  defaultColorSet.scss  defaultColorTheme.scss  i18n.ts  main.tsx  router.tsx  style.scss  tauriInvokeWrapper.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cfs.rs  file_types.rs  main.rs  raw_fs.rs  types.rs
src-tauri/src/cfs/: app_config.rs  copy_directory.rs  copy_file.rs  copy_file_with_progress.rs  get_dirnames.rs  get_disk_names.rs  get_disks.rs  get_file_size.rs  mod.rs  read_dir.rs  read_dir_simplified.rs  remove_directory.rs  remove_file.rs  rename.rs  sort_files.rs  types.rs  watch_dir.rs
src-tauri/src/cfs/copy/: copy_directory.rs  copy_file.rs  copy_multiple_files.rs  mod.rs  utils.rs
src-tauri/src/cfs/remove/: confirm_deletion.rs  mod.rs  move_to_trash.rs  remove_directory.rs  remove_file.rs  remove_multiple.rs
src/__tests__/: test-utils.tsx
src/assets/: index.ts
src/components/: GoogleIcon.tsx  LocalizedText.tsx  Scrollbars.tsx  Settings.tsx  TittleFrame.tsx
src/errorFallbackScreens/: types.ts
src/hooks/: index.ts  useClickAway.ts  useDisclosure.ts  useListenDragAndDrop.ts  usePasteFile.ts  useRefState.ts  useResizeObserver.ts  useWatchPathChange.ts
src/i18n/: index.ts
src/types/: dom.d.ts  (+5 more)
(+140 files in other folders)
