[package]
name = "file-explorer"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc.0", features = [] }
tauri-plugin-dialog = "2.0.0-rc.0"
notify = { version = "5.1.0", features = ["serde"] }
rand = "0.8.5"
sysinfo = "0.27.7"
trash = "3.0.4"
